Разобраться с вызовом методов, ускорить работу Запилить какой нибудь Rest API Controller